--- a/mscore/manual/sources/MuseScore-nb.html
+++ b/mscore/manual/sources/MuseScore-nb.html
@@ -3,17 +3,32 @@
   <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="search" href="http://www.musescore.org/nb/opensearch/apachesolr_search" type="application/opensearchdescription+xml" title="MuseScore Søk" />
+
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_54934ceb85a1ee49e22331f1720515ed.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_4b1b860c2b457e06f4249aad62ea4dd0.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://www.musescore.org/nb/h%C3%A5ndbok/h%C3%A5ndbok' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_1872123c99d9b7ff32fde2dde7740aac.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project/project.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project_issue/project_issue.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/book/book.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/simplenews/simplenews.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/forum/forum.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/print/css/print.css?y" />
   </head>
   <body>
         <div class="print-logo"></div>
@@ -101,6 +116,14 @@ sudo su -c 'echo snd-seq &gt;&gt; /etc/modules'</pre></li>
 </ul>
 </li>
 </ul>
+<h3 id="mac-installation">Mac OSX</h3>
+<h4>Installere</h4>
+<p>Du finne Mac dmg-filen på <a href="http://www.musescore.org/nb/../download">nedlastingssiden</a> på MuseScore websiten. Når nedlastingen er ferdig, blir dmb-filen atomatisk montert på skrivebordet som "MuseScore-0.9.5" og installasjonsdialogen starter.</p>
+<p><img src="/sites/musescore.org/files/install_mac.png" alt="install_mac.png" title="install_mac.png" width="399" height="262" class="inline" /></p>
+<p>Dra MuseScore ikonet og slipp det på katalogikonet for "Applications". Hvis du ikke er admin på maskinen vil du bli spurt om passord.<br />
+Du kan nå starte MuseScore fra "Applications" eller Spotlight.</p>
+<h4>Avinstallere</h4>
+<p>Bare slett MuseScore fra "Applications"-katalogen.</p>
   </div>
 <div id="node-2136" class="section-3">
   <h1 class="book-heading">Lag nytt noteark</h1>
@@ -528,6 +551,7 @@ Dette kan gjøres i MuseScore på følgende måte:</p>
   <p><strong>Linje-paletten</strong> - som de andre <a href="http://www.musescore.org/nb/håndbok/palett" title="palett">palettene</a> - fungerer med dra-og-slipp. Bruk musen for å dra en linje fra paletten og slipp den på notearket.</p>
 <p><img src="/sites/musescore.org/files/line-palette-no.png" alt="Linje palett" title="Linje palett" width="185" height="209" class="inline" /></p>
 <h3>Endre lengde</h3>
+<p>Hvis du endrer lengden på en linje med musen, blir forankringspunktet (notene eller linjene som linjen hører til) uforandret. Derfor er den følgende metoden å foretrekke for å justere start- eller sluttpunktet på en linje.</p>
 <ol>
 <li>Hvis du er i <samp class="mode">noteskrivingsmodus</samp>, trykk <kbd><kbd>N</kbd></kbd> eller <kbd><kbd>Esc</kbd></kbd> for å forlate noteskrivingsmodus</li>
 <li>Dobbeltklikk linjen som du vil endre</li>
@@ -1032,14 +1056,16 @@ Vertikale rammer lager tomrom mellom eller før systemer (stykker). Høyden er j
 <li>Hvilket operativsystem du bruker (f.eks. Windows Vista, Mac OS 10.5 eller Ubuntu 9.04)</li>
 <li>Hvis du skal rapportere om en feil, beskriv de konkrete stegene som fører til problemet (hvor du klikker, hvilke taster du trykker, hva du ser på skjermen, osv.). Hvis du ikke klarer å gjenskape problemet ved å utføre de nevnte stegene, er det sannsynligvis ingen vits å rapportere problemet, siden utviklerne heller ikke vil være i stand til å gjenskape problemet (og løse det).</li>
 <li>For å gjøre jobben enklere for alle, prøv å rapportere kun èn feil per feilrapport.</li>
+<li>Husk at formålet med en feilrapport ikke bare er å melde fra at feilen eksisterer, men også gjøre det mulig for andre å reprodusere feilen på en enkel måte.</li>
 </ul>
   </div>
 </div>
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer"></div>
     <hr class="print-hr" />
+    <div class="print-footer">Lisensiert under <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a> lisensen, 2002-2009 <a href="mailto:ws at seh dot de">Werner Schweer</a> med flere.
+</div>
     <div class="print-source_url"></div>
     <div class="print-links"></div>
   </body>
