--- a/mscore/manual/sources/MuseScore-nl.html
+++ b/mscore/manual/sources/MuseScore-nl.html
@@ -3,17 +3,32 @@
   <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="search" href="http://www.musescore.org/nl/opensearch/apachesolr_search" type="application/opensearchdescription+xml" title="MuseScore Zoeken" />
+
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_13c8e349867c3e6394ad4c24dbd15728.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_18c7e30cc250d9d53016626982b1d71b.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://www.musescore.org/nl/handboek/handboek' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_1872123c99d9b7ff32fde2dde7740aac.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project/project.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project_issue/project_issue.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/book/book.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/simplenews/simplenews.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/forum/forum.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/print/css/print.css?y" />
   </head>
   <body>
         <div class="print-logo"></div>
@@ -162,7 +177,7 @@ U kunt nu starten met MuseScore van Applications of SpotLight.</p>
   <p>In het "Van start gaan" hoofdstuk leerde je hoe een <a href="http://www.musescore.org/nl/handboek/maak-een-nieuwe-partituur" title="Maak een nieuwe partituur">partituur aan te maken</a>. Het "Basis concepten" hoofdstuk geeft een overzicht van MuseScore en beschrijft de algemene methodes om te werken met een partituur.</p>
   <div id="node-396" class="section-3">
   <h1 class="book-heading">Noten ingeven</h1>
-  <p>Noten invoeren in <samp class="mode">Noten Invoer mode</samp>. Selecteer eerst een noot of rust als startpositie voor het invoeren van een noot.  Bij het invoeren vervang je de bestaande noot of rust.  Dus de duur van een maat veranderd niet.</p>
+  <p>Noten invoeren in <samp class="mode">Noten Invoer mode</samp>. Selecteer eerst een noot of rust als startpositie voor het invoeren van een noot.  Bij het invoeren vervang je de bestaande noot of rust.  Dus de duur van een maat verandert niet.</p>
 <ul>
 <li><kbd><kbd>N</kbd></kbd>: 	Inschakelen <samp class="mode">Noten Invoer mode</samp>.</li>
 <li><kbd><kbd>Escape</kbd></kbd> (punt) Bladeren <samp class="mode">Noten Invoer mode</samp>.</li>
@@ -295,7 +310,7 @@ U kunt nu starten met MuseScore van Applications of SpotLight.</p>
 <h3>Notenbalken</h3>
 <p>De eigenschap <em> Zichtbaar </em> kunt u gebruiken voor het tonen of verbergen van de noten en de notenbalk voor de geselecteerde maten. De eigenschap <em> Stokloos </em> kunt u gebruiken om notenstokken te tonen of te verbergen voor alle geselecteerde maten. Houdt er rekening mee dat normaal gesproken een stok die als halve noot en kwart noten (crotchets) alleen toont de notenkop wanneer die gemarkeerd is als stokloos. </p>
 <h3>Maatduur</h3>
-<p>Normaal is de nominale en de feitelijke duur van een maat identiek. Een geselecteerde (opmaat) maat kan een andere feitelijke duur krijgen.</p>
+<p>De nominale duur is de maatsoort die wordt weergegeven op de partituur. U kunt de werkelijke duur van een maat veranderen ongeacht de maatsoort welke weergegeven wordt op de partituur. Normaal is de nominale en de feitelijke duur van een maat identiek. Een geselecteerde (opmaat) maat kan een andere feitelijke duur krijgen.</p>
 <h3>Onregelmatig</h3>
 <p>Een "onregelmatige" maat wordt niet meegeteld in de maatnummering. Normaal gezien wordt een opmaat gemarkeerd als een"onregelmatige". Wanneer u gebruik maakt van versie 0.9.4 of eerder en een maat toewijst als onregelmatig dan moet u eerst opslaan en herladen de partituur om de veranderde maatnummers te tonen.</p>
 <h3>Herhalingen</h3>
@@ -602,10 +617,10 @@ Alle noten en rusten op deze maat worden dan vervangen door een one-bar rust.</p
   </div>
 <div id="node-428" class="section-3">
   <h1 class="book-heading">Tuplet</h1>
-  <p>Voor het maken van een triplet plaatst je eerst een noot met de duur van de gehele triplet. Selecteer dan de noot en toets <kbd><kbd>Ctrl</kbd>+<kbd>3</kbd></kbd> deze noot veranderd dan in een triplet. Evenzo <kbd><kbd>Ctrl</kbd>+<kbd>5</kbd></kbd> veranderd de noot in een kwintool.</p>
+  <p>Voor het maken van een triool plaatst je eerst een noot met de duur van de gehele triool. Selecteer dan de noot en toets <kbd><kbd>Ctrl</kbd>+<kbd>3</kbd></kbd> deze noot veranderd dan in een triool. Evenzo <kbd><kbd>Ctrl</kbd>+<kbd>5</kbd></kbd> veranderd de noot in een kwintool.</p>
 <p>Selecteer eerst een noot:<br />
 <img src="/sites/musescore.org/files/tuplet1_0.png" alt="Quarter note selected" title="Quarter note selected" width="227" height="58" class="inline" /></p>
-<p><kbd><kbd>Ctrl</kbd>+<kbd>3</kbd></kbd> creëert een triplet:<br />
+<p><kbd><kbd>Ctrl</kbd>+<kbd>3</kbd></kbd> creëert een triool:<br />
 <img src="/sites/musescore.org/files/tuplet2_0.png" alt="Triplet eight note followed by rests" title="Triplet eight note followed by rests" width="248" height="63" class="inline" /></p>
 <p>die verder kan worden bewerkt<br />
 <img src="/sites/musescore.org/files/tuplet3_0.png" alt="Three triplet eight notes" title="Three triplet eight notes" width="244" height="70" class="inline" /></p>
@@ -650,12 +665,6 @@ Wanneer je de handvatten beweegt, wordt er een stippellijn van de verschuivende 
                     <div class="filefield-file clear-block"><div class="filefield-icon field-icon-image-png"></div><a href="http://www.musescore.org/sites/musescore.org/files/lijn_eigenschappen_nl_0.png" type="image/png; length=50824">lijn_eigenschappen_nl.png</a></div>        </div>
         </div>
 </div>
-<table id="attachments" class="sticky-enabled">
- <thead><tr><th>Bijlage</th><th>Grootte</th> </tr></thead>
-<tbody>
- <tr class="odd"><td><a href="http://www.musescore.org/sites/musescore.org/files/volta-line-properties.png">volta-line-properties.png</a></td><td>9.84 KB</td> </tr>
-</tbody>
-</table>
   </div>
 <div id="node-445" class="section-3">
   <h1 class="book-heading">Voorslagnoten</h1>
@@ -685,7 +694,7 @@ Wanneer je de handvatten beweegt, wordt er een stippellijn van de verschuivende 
   </div>
 <div id="node-440" class="section-3">
   <h1 class="book-heading">Waardestrepen</h1>
-  <p><strong>Waardestrepen</strong> worden automatisch gezet maar de automatische instelling kan manueel overschreven worden. Sleep het waardestreepsymbool van het waardestrepenpalet naar een noot waarvan je de waardestreep wil veranderen.<br />
+  <p><strong>Waardestrepen</strong> worden automatisch gezet maar de automatische instelling kan handmatig overschreven worden. Sleep het waardestreepsymbool van het waardestrepenpalet naar een noot waarvan je de waardestreep wilt veranderen.<br />
 <img src="/sites/musescore.org/files/waardestrepen2_nl_0.png" alt="Waardestrepen palet" title="Waardestrepen palet" width="189" height="69" class="inline" /></p>
 <p>U kunt ook eerst een noot selecteren en dan dubbel klikken op het juiste symbool in het waardestreep palet.<br />
 <img src="/sites/musescore.org/files/beambutton1_0.png" alt="Start waardestreep button" title="Start waardestreep button" width="29" height="28" class="inline" /> 	   	Start een waardstreep op deze noot.<br />
@@ -730,28 +739,29 @@ Door op de Afspeel <img src="/sites/musescore.org/files/play.png" alt="play.png"
   <p>MuseScore wordt geleverd met een pianoklank voor het afspelen. Voor meer klanken zoals een viool of percussie, heeft u een Algemene MIDI SoundFont nodig.</p>
 <h3>Overzicht</h3>
 <p>Een SoundFont-bestand kan een verschillend aantal instrumentengeluiden opslaan. Veel SoundFonts zijn beschikbaar op het web. Zoek er een die de 128 geluiden van <a href="http://en.wikipedia.org/wiki/General_MIDI">General MIDI</a> (GM) gebruikt.</p>
-<p>De geluidskwaliteit en de bestandsgrootte van SoundFonts welke beschikbaar op het web zijn gevarieerd. Grotere SoundFonts klinken vaak beter, maar ze zijn misschien net iets te groot om te worden uitgevoerd op uw computer. Wanneer je vindt dat MuseScore traag loopt na het installeren van een groot SoundFont of wanneer je computer het niet kan niet bijhouden tijdens het afspelen, zoek dan naar een kleinere SoundFont. Hieronder staan drie populaire GM SoundFonts van verschillende grootte.</p>
+<p>De geluidskwaliteit en de bestandsgrootte van SoundFonts welke beschikbaar op het web zijn gevarieerd. Grotere SoundFonts klinken vaak beter, maar ze zijn misschien net iets te groot om te worden uitgevoerd op uw computer. Wanneer u vindt dat MuseScore traag loopt na het installeren van een groot SoundFont of wanneer uw computer het niet kan niet bijhouden tijdens het afspelen, zoek dan naar een kleinere SoundFont. Hieronder staan drie populaire GM SoundFonts van verschillende grootte.</p>
 <ul>
-<li>FluidR3_GM.sf2 (141 MB uncompressed), see <a href="http://www.musescore.org/download/fluid-soundfont.tar.gz">Fluid</a></li>
-<li>MagicSF_ver2.sf2 (67.8 MB uncompressed), see <a href="http://www.personalcopy.com/sfarkfonts1.htm">Big SoundFonts</a></li>
+<li>FluidR3_GM.sf2 (141 MB ongecomprimeerd), zie <a href="http://www.musescore.org/download/fluid-soundfont.tar.gz">Fluid</a></li>
+<li>MagicSF_ver2.sf2 (67.8 MB ongecomprimeerd), zie <a href="http://www.personalcopy.com/sfarkfonts1.htm">Big SoundFonts</a></li>
+<li>TimGM6mb.sf2 (5.7 MB ongecomprimeerd), zie <a href="http://ocmnet.com/saxguru/Timidity.htm#sf2">Tim Brechbill's Timidity++ Download Site</a> "Free SoundFont" sectie</li>
 </ul>
 <h3>Compressie</h3>
-<p>SoundFont bestanden zijn groot en daarom zijn ze vaak gecomprimeerd in een verscheidenheid aan formaten, zoals: .zip, .sfArk, and .tar.gz. Je moet deze bestanden eerst uitpakken voordat ze kunnen worden gebruikt. </p>
+<p>SoundFont bestanden zijn groot en daarom zijn ze vaak gecomprimeerd in een verscheidenheid aan formaten, zoals: .zip, .sfArk, and .tar.gz. U moet deze bestanden eerst uitpakken voordat u ze kunt gebruiken. </p>
 <ul>
 <li>ZIP is standaard compressie formaat welke door de meeste besturingssystemen wordt ondersteund.</li>
 <li>sfArk is een compressie formaat welke speciaal ontworpen is voor het comprimeren van SoundFont bestanden. Gebruik de speciale <a href="http://www.melodymachine.com/sfark.htm">sfArk software</a> om de bestande uit te pakken.</li>
-<li>.tar.gz is een veel gebruikt formaat onder Linux. Windows gebruikers kunnen <a href="http://www.7-zip.org/">7-zip</a> gebruiken die een breed scala van compressie formaten ondersteunt. Houd er rekening mee dat je twee keer moet decomprimeren (uitpakken): een keer voor GZip en een keer voor TAR.</li>
+<li>.tar.gz is een veel gebruikt formaat onder Linux. Windows gebruikers kunnen <a href="http://www.7-zip.org/">7-zip</a> gebruiken die een breed scala van compressie formaten ondersteunt. Houd er rekening mee dat u twee keer moet decomprimeren (uitpakken): een keer voor GZip en een keer voor TAR.</li>
 </ul>
 <h3>MuseScore voorkeuren</h3>
 <p>Na het vinden van en het decomprimeren van een SoundFont moet je het in de set-up aanpassen voordat MuseScore het kan gebruiken.</p>
-<p>Ga naar <kbd><samp class="menu">Bewerk</samp> → <samp class="menuitem">Voorkeursinstellingen...</samp> → <samp class="tab">I/O</samp> tab</kbd>.</p>
-<p>De aanvankelijke SoundFont-instelling is <samp>:/data/piano1.sf2</samp>. Vervang dit met de locatie van uw nieuwe SoundFont (.sf2) bestand. Klik op het pictogram Openen om te zoeken naar het bestand op je computer en open het.</p>
-<p>Om de wijzigingen door te voeren klik je op OK van het voorkeuren paneel. Sluit MuseScore af en start het programma opnieuw om de wijzigingen te activeren.</p>
+<p>Ga naar <kbd><samp class="menu">Bewerk</samp> → <samp class="menuitem">Voorkeursinstellingen...</samp> → <samp class="tab">I/O</samp> tab</kbd>. (Wanneer u een prereleases of nightly build gebruikt ga dan naar   <kbd> <samp class="menu">Beeld</samp> → <samp class="menuitem">Synthesizer</samp></kbd>.)</p>
+<p>De aanvankelijke SoundFont-instelling is <samp>:/data/piano1.sf2</samp>. Vervang dit met de locatie van uw nieuwe SoundFont (.sf2) bestand. Klik op het pictogram Openen om te zoeken naar het bestand op uw computer en open het.</p>
+<p>Om de wijzigingen door te voeren klikt u op OK van het voorkeuren paneel. Sluit MuseScore af en start het programma opnieuw om de wijzigingen te activeren.</p>
 <h3>Problemen oplossen</h3>
 <p>Wanneer het paneel van het afspeelpaneel grijs if niet zichtbaar is, volg dan de hieronder vermelde instructies om uw geluid opnieuw werkend te krijgen:</p>
 <ol>
-<li>	Zorg er voor dat er een vinkje staat naast het <kbd><samp class="menu">Display</samp> → <samp class="menuitem">Transporteer</samp></kbd> menu item. U kunt het vinkje toevoegen of verwijderen door te klikken op het overeenkomstige menu-item. Als deze stap niet het probleem oplost ga dan door naar de volgende stap hieronder</li>
-<li>Wanneer het afspeel-paneel verdwijnt na het veranderen van de SoundFont ga naar <kbd><samp class="menu">Edit</samp> → <samp class="menuitem">Preferences...</samp> → <samp class="tab">I/O</samp> tab</kbd> en klik op OK zonder enige wijziging, Na de herstart van MuseScore moet het afspelen weer mogelijk zijn.<br />
+<li>	Zorg er voor dat er een vinkje staat naast het <kbd><samp class="menu">Beeld</samp> → <samp class="menuitem">Transporteer</samp></kbd> menu item. U kunt het vinkje toevoegen of verwijderen door te klikken op het overeenkomstige menu-item. Als deze stap het probleem niet oplost ga dan door naar de volgende stap hieronder.</li>
+<li>Wanneer het afspeel-paneel verdwijnt na het veranderen van de SoundFont ga naar <kbd><samp class="menu">Bewerk</samp> → <samp class="menuitem">Voorkeursinstellingen...</samp> → <samp class="tab">I/O</samp> tab</kbd> en klik op OK zonder enige wijziging, Na de herstart van MuseScore moet het afspelen weer mogelijk zijn.<br />
 Dit is een bekend probleem met versie 0.9.3 of eerder.</li>
 </ol>
   </div>
@@ -786,7 +796,7 @@ Vanuit het hoofdmenu kiest u <kbd><samp class="menu">Beeld</samp> → <samp clas
 <h4>Wijzerplaten</h4>
 <p>Om te draaien klik net als de wijzers van de klok mee en sleep naar omhoog. Om een linksdraaiende wijzerplaat te draaien (tegen de wijzers van de klok in) klik naar beneden en sleep.</p>
 <h4>Geluid</h4>
-<p>Het geluid drop-down menu leest ieder instrument wat ondersteund wordt door uw huidige <a href="http://www.musescore.org/pt-br/manual-pt-br/soundfont" title="SoundFont">SoundFont</a>. Deze functie is niet geïmplementeerd in versie 0.9.4 of eerder voor Windows, maar wel in versie 0.9.5.</p>
+<p>Het geluid drop-down menu leest ieder instrument wat ondersteund wordt door uw huidige <a href="http://www.musescore.org/el/εγχειρίδιο/soundfont" title="SoundFont">SoundFont</a>. Deze functie is niet geïmplementeerd in versie 0.9.4 of eerder voor Windows, maar wel in versie 0.9.5.</p>
 <h3>Mid-notenbalken veranderen</h3>
 <p>In MuseScore kunt u geluiden halverwege een stuk van een enkel instrument veranderen. Bijvoorbeeld: bij strijkers kunt overschakelen naar pizzicato of tremolo en trompet kunt overschakelen naar gedempt trompet. De volgende instructies gebruiken gedempt trompet als een voorbeeld, maar dezelfde principes gelden voor pizzicato of tremolo strijkers.</p>
 <ol>
@@ -804,7 +814,7 @@ Op dit punt heeft de tekst van de notenbalk de funktie van aanduiding maar heeft
 </div>
 <div id="node-414" class="section-2">
   <h1 class="book-heading">Tekst</h1>
-  <p>Het "Tekst" hoofdstuk handelt over songteksten, akkoorden en andere notenbalktekst. Het vorige hoofdstuk behandelde <a href="http://www.musescore.org/nl/handboek/tempo" title="tempo">tekst wat het afspeeltempo beïnvloed</a>.</p>
+  <p>Het "Tekst" hoofdstuk handelt over songteksten, akkoorden en andere notenbalktekst. Het vorige hoofdstuk behandelde <a href="http://www.musescore.org/ca/manual/tempo" title="tempo">tekst wat het afspeeltempo beïnvloed</a>.</p>
   <div id="node-415" class="section-3">
   <h1 class="book-heading">Tekst editing</h1>
   <p>Klik dubbel op tekst om over te schakelen naar <samp class="mode">bewerkingsmodus</samp>:<br />
@@ -952,8 +962,9 @@ Op dit punt heeft de tekst van de notenbalk de funktie van aanduiding maar heeft
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer"></div>
     <hr class="print-hr" />
+    <div class="print-footer">Gepubliceerd onder de <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a> licentie, 2002-2009 <a href="mailto:ws at seh dot de">Werner Schweer</a> en anderen.
+</div>
     <div class="print-source_url"></div>
     <div class="print-links"></div>
   </body>
