--- a/mscore/manual/sources/MuseScore-it.html
+++ b/mscore/manual/sources/MuseScore-it.html
@@ -3,17 +3,32 @@
   <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="search" href="http://www.musescore.org/it/opensearch/apachesolr_search" type="application/opensearchdescription+xml" title="MuseScore Cerca" />
+
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_8161cde6e5814157b45e6bdb38489137.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_08be8815d8070d761e3ffda4b6de2904.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://www.musescore.org/it/manuale/indice' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_1872123c99d9b7ff32fde2dde7740aac.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project/project.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project_issue/project_issue.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/book/book.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/simplenews/simplenews.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/forum/forum.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/print/css/print.css?y" />
   </head>
   <body>
         <div class="print-logo"></div>
@@ -36,9 +51,9 @@ jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoin
 <p>Potete trovare il programma di installazione nella pagina di <a href="http://www.musescore.org/it/../download">Download</a> del sito di MuseScore. Fare click sul link per scaricare il programma. Il browser (es. Explorer, Firefox) chiederà conferma. Fare click su “Salva file”. </p>
 <p>Quando il file è stato scaricato fare doppio click su questo file per iniziare l'installazione. Windows apre una finestra per chiedere conferma. Fare click su “Continua”.</p>
 <p><img src="/sites/musescore.org/files/install-wizard-1-winxp_0.png" alt="install-wizard-1-winxp.png" title="install-wizard-1-winxp.png" width="377" height="295" class="inline" /><br />
-Il programma di installazione raccomanda di chiudere le altri applicazioni prima di procedere. Chiudere tutte le altre applicazioni e fare click sul pulsante “Avanti”.</p>
+Il programma di installazione raccomanda di chiudere le altre applicazioni prima di procedere. Dopo aver chiuso tutte le altre applicazioni fare click sul pulsante “Avanti”.</p>
 <p>Il programma di installazione mostra i termini di licenza del software. Fare click su “Accetto” per continuare.</p>
-<p>Successivamente chiede conferma riguardo la cartella di destinazione del programma. Se state installando una nuova versione ma volete conservare la precedente sul vostro computer potete scegliere una cartella differente da quella proposta. Altrimenti fare click su “Avanti” per continuare.</p>
+<p>Successivamente chiede conferma riguardo la cartella di destinazione del programma. Se state installando una nuova versione di MuseScore ma volete conservare la precedente sul vostro computer potete scegliere una cartella differente da quella proposta. Altrimenti fare click su “Avanti” per continuare.</p>
 <p>Successivamente chiede conferma del nome della cartella di MuseScore che appare nella lista dei programmi del menù Start di Windows. Fare click su “Installa” per continuare.</p>
 <p>In pochi minuti il programma installa i file e le configurazioni. Quando ha finito fare click su “Fine” per uscire dal programma di installazione. Se lo desiderate è possibile ora cancellare il programma di installazione scaricato.<br />
 <img src="/sites/musescore.org/files/install-wizard-finish-winxp_1.png" alt="install-wizard-finish-winxp.png" title="install-wizard-finish-winxp.png" width="377" height="295" class="inline" /></p>
@@ -47,14 +62,14 @@ Il programma di installazione raccomanda di chiudere le altri applicazioni prima
 <p>Dopo alcuni secondi MuseScore apre una partitura dimostrativa. Potete fare delle prove con questa partitura e farvi un'idea del programma. Come passo successivo potete <a href="http://www.musescore.org/it/manuale/creare-una-nuova-partitura" title="Creare una nuova partitura">Creare una nuova partitura</a>.<br />
 <img src="/sites/musescore.org/files/screenshot-demo-score.png" alt="screenshot-demo-score.png" title="screenshot-demo-score.png" width="450" height="416" class="inline" /></p>
 <h3>Linux</h3>
-<p>Questa guida è stata scritta principalmente per gli utilizzatori del K Desktop Environment (KDE), ambiente desktop usato nei sistemi Linux come SUSE o Kubuntu, con istruzioni tra parentesi (...) per gli utilizzatori del GNOME Desktop Environment, ambiente desktop usato nei sistemi Linux come Ubuntu o Fedora. </p>
+<p>Questa guida è stata scritta principalmente per gli utilizzatori del K Desktop Environment (KDE), ambiente desktop usato nei sistemi Linux come SUSE o Kubuntu, con le istruzioni tra parentesi (...) per gli utilizzatori del GNOME Desktop Environment, ambiente desktop usato nei sistemi Linux come Ubuntu o Fedora. </p>
 <h4>Installare MuseScore</h4>
 <p>I sorgenti del progetto sono disponibili all'indirizzo <a class="freelinking external" href="http://www.musescore.org/it/download">http://www.musescore.org/it/download</a> ma in genere trovate i package binari nei repository della distribuzione che utilizzate.<br />
 Nella distribuzione Ubuntu, il package MuseScore si trova nel repository "universe". Se volete installare MuseScore il repository "universe" deve essere abilitato.<br />
-Per il suono potete utilizzare in alternativa ALSA oppure JACK sound server. Quale delle sue soluzioni funziona meglio dipende dalla configurazione del sistema.</p>
+Per il suono potete utilizzare in alternativa ALSA oppure JACK sound server. Quale delle due soluzioni funziona meglio dipende dalla configurazione del sistema.</p>
 <p>Per installare MuseScore seguire questi passaggi:</p>
 <ol>
-<li>Aprire Aggiungi/Rimuovi Software (in Gnome: Aggiungi/Rimuovi Programmi)</li>
+<li>Aprire Aggiungi/Rimuovi Software (in Gnome: Aggiungi/Rimuovi Programmi - Ubuntu Karmic: Ubuntu Software Center)</li>
 <li>Nella categoria Multimedia (in Gnome: Audio &amp; Video), selezionare MuseScore</li>
 <li>Selezionare anche nella stessa categoria l'applicativo  "JACK Control".</li>
 <li>Fare click su Anteprima (solo KDE)</li>
@@ -63,7 +78,7 @@ Per il suono potete utilizzare in alternativa ALSA oppure JACK sound server. Qua
 <h4>Configurazione di JACK server</h4>
 <p>Lanciare l'applicativo "Jack Control" e nella finetra "JACK Audio Connection Kit" selezionare Setup.</p>
 <ol>
-<li>All'interno della scheda audio deselezionare "realtime"</li>
+<li>All'interno della scheda  “Settings” deselezionare "realtime"</li>
 <li>Se utilizzate ALSA audio, alla voce driver selezionare "ALSA" e alle voci Input Device e Output Device I/O device selezionare “hw:0”<br />
              In alcuni sistemi funziona OSS ma non ALSA.<br />
              Se utilizzate OSS audio, alla voce driver selezionare "Oss" e alle voci Input Device e Output Device I/O device selezionare "/dev/audio".</li>
@@ -100,6 +115,14 @@ sudo su -c 'echo snd-seq &gt;&gt; /etc/modules'</pre></li>
 </ul>
 </li>
 </ul>
+<h3 id="mac-installation">MacOSX</h3>
+<h4>Installazione</h4>
+<p>Cercare il file dmg per Mac nella pagina <a href="http://www.musescore.org/it/../download">Download</a> del sito di MuseScore. Fare click sul link per scaricare il file. Alla fine del download il file dmg viene mostrato sul desktop come "MuseScore-0.9.5" e appare il programma di installazione.</p>
+<p><img src="/sites/musescore.org/files/install_mac.png" alt="install_mac.png" title="install_mac.png" width="399" height="262" class="inline" /></p>
+<p>Trascinare l'icona di MuseScore all'interno della cartella Applicazioni. Se non siete l'amministratore, MacOSX chiederà la password.<br />
+E' possibile ora lanciare MuseScore da Applicazioni oppure da SpotLight.</p>
+<h4>Disinstallazione</h4>
+<p>Cancellare MuseScore dalla cartella Applicazioni.</p>
   </div>
 <div id="node-838" class="section-3">
   <h1 class="book-heading">Creare una nuova partitura</h1>
@@ -868,8 +891,9 @@ Premendo il tasto Play <img src="/sites/musescore.org/files/play.png" alt="play.
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer"></div>
     <hr class="print-hr" />
+    <div class="print-footer">Sotto licenza <a href="http://creativecommons.org/licenses/by/3.0/deed.it">Creative Commons Attribution 3.0</a>, 2002-2009 <a href="mailto:ws at seh dot de">Werner Schweer</a> e altri.
+</div>
     <div class="print-source_url"></div>
     <div class="print-links"></div>
   </body>
