--- a/mscore/manual/sources/MuseScore-ru.html
+++ b/mscore/manual/sources/MuseScore-ru.html
@@ -3,17 +3,32 @@
   <head>
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="search" href="http://www.musescore.org/ru/opensearch/apachesolr_search" type="application/opensearchdescription+xml" title="MuseScore Поиск" />
+
     <title></title>
-    <script type="text/javascript" src="/sites/musescore.org/files/js/js_e81ab2b9ae207b37d52484a5c6fc28e5.js"></script>
+    <script type="text/javascript" src="/sites/musescore.org/files/js/js_9ae727c321d6a7ea54c4ec3fc46bb76b.js"></script>
 <script type="text/javascript">
 <!--//--><![CDATA[//><!--
-jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip"}});
+jQuery.extend(Drupal.settings, {"basePath":"\/","googleanalytics":{"trackOutgoing":1,"trackMailto":1,"trackDownload":1,"trackDownloadExtensions":"7z|aac|avi|csv|doc|exe|flv|gif|gz|jpe?g|js|mp(3|4|e?g)|mov|pdf|phps|png|ppt|rar|sit|tar|torrent|txt|wma|wmv|xls|xml|zip|dmg|mscz|mscx"}});
 //--><!]]>
 </script>
     <meta name='robots' content='noindex, nofollow' />
     <base href='http://www.musescore.org/ru/c%D0%BF%D1%80%D0%B0%D0%B2%D0%BE%D1%87%D0%BD%D0%B8%D0%BA/%D0%B2%D0%B2%D0%B5%D0%B4%D0%B5%D0%BD%D0%B8%D0%B5' />
     <link rel='shortcut icon' href='/sites/musescore.org/files/amadou_favicon.ico' type='image/x-icon' />
-    <link type="text/css" rel="stylesheet" media="all" href="/sites/musescore.org/files/css/css_1872123c99d9b7ff32fde2dde7740aac.css" />
+    <link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project/project.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/project_issue/project_issue.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/book/book.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/node/node.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/poll/poll.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/defaults.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/system/system-menus.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/user/user.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/cck/theme/content-module.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/filefield/filefield.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/simplenews/simplenews.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/modules/forum/forum.css?y" />
+<link type="text/css" rel="stylesheet" media="all" href="/sites/all/modules/print/css/print.css?y" />
   </head>
   <body>
         <div class="print-logo"></div>
@@ -139,8 +154,9 @@ sudo su -c 'echo snd-seq &gt;&gt; /etc/modules'</pre></li>
 </div>
 </div>
     <div class="print-taxonomy"></div>
-    <div class="print-footer"></div>
     <hr class="print-hr" />
+    <div class="print-footer">На условиях лицензии <a href="http://creativecommons.org/licenses/by/3.0">Creative Commons Attribution 3.0</a>, 2002-2009 <a href="mailto:ws at seh dot de">Werner Schweer</a> и другие.
+</div>
     <div class="print-source_url"></div>
     <div class="print-links"></div>
   </body>
